# kotlin-satlib

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Makefile  README.adoc  build.gradle.kts  cadical-shared-lib.patch  jitpack.yml  minisat-dll.patch  run-nexus  run-nexus.bat  settings.gradle.kts
core/: build.gradle.kts
jna/: build.gradle.kts
jni/: BUILD.adoc  Makefile
kotlin-satlib-core/: build.gradle.kts
kotlin-satlib-jna/: build.gradle.kts
kotlin-satlib-jni/: BUILD.adoc  Cargo.toml  Dockerfile  Makefile  build.gradle.kts
kotlin-satlib-jni/patches/: cadical-dylib.patch  cadical-shared-lib.patch  cadical-shared.patch  cadical-stats.patch  glucose-install.patch  glucose-mingw-lib-prefix.patch  glucose-mingw-sys-time.patch  minisat-fpermissive.patch  minisat-make-dll.patch  minisat-memUsedPeak.patch
kotlin-satlib-jni/scripts/: analyze_benchmarks.R  build-libs-docker.sh
kotlin-satlib-jni/src/jmh/kotlin/com/github/lipen/satlib/jni/: Benchmarks.kt
kotlin-satlib-jni/src/jmh/kotlin/com/github/lipen/satlib/solver/jni/: Benchmarks.kt
kotlin-satlib-jni/src/main/cpp/: JCadical.cpp  JCryptoMiniSat.cpp  JGlucose.cpp  JMiniSat.cpp
kotlin-satlib-jni/src/main/kotlin/com/github/lipen/satlib/jni/: JCadical.kt  JCryptoMiniSat.kt  JGlucose.kt  JMiniSat.kt  Loader.kt
kotlin-satlib-jni/src/main/kotlin/com/github/lipen/satlib/solver/jni/: JCadical.kt  JCryptoMiniSat.kt  JGlucose.kt  JMiniSat.kt  JSplr.kt  Loader.kt
kotlin-satlib-jni/src/main/rust/: JSplr.rs
kotlin-satlib-solvers-jna/: build.gradle.kts
kotlin-satlib-solvers-jni/: build.gradle.kts
(+297 files in other folders)
